--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/ambadasgote7/Namaste-React#readme",
   "devDependencies": {
-    "parcel": "^2.16.3"
+    "parcel": "^2.16.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.14.2"
