--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "tailwindcss": "^4.1.18"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.14.2"
   },
   "browserslist": [
